--- a/user_auth/templates/items/navbar_guest.html
+++ b/user_auth/templates/items/navbar_guest.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="#" style="color: black;">Contact</a>
               </li>
               <li class="nav-item" style="padding-right: 59px;;">
-                <button class="btn btn-warning" style="width: 140px; height: 48px; color: #0D5CAB;" type="submit">
+                <button class="btn btn-warning" style="hover: #0D5CAB; width: 140px; height: 48px; color: #0D5CAB;" type="submit">
                 {% if request.path == '/login/' %}
                   Register
                 {% elif request.path == '/register/' %}
