--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -38,6 +38,7 @@
                   <div class="col-md-12">
                     <div class="d-flex justify-content-center align-items-center">
                       <form method="POST">
+                        {% csrf_token %}
                         <div class="mb-3">
                           <label for="email" class="form-label" style="font-size: 16px; font-weight: 400;">Email</label>
                           <input type="email" class="form-control justify-content-center" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="email" name="email" placeholder="example@email.com">
